advanced blocks better aligned - fix

--- a/jps_visualiser/web/resources/styles.css
+++ b/jps_visualiser/web/resources/styles.css
@@ -290,7 +290,7 @@ html, body {
 }
 
 .grid.GRID_MODE_ADVANCED .node .part.SOUTH_WEST {
-  transform: scaleY(-1);
+  transform: scale(-1);
 }
 
 .grid.GRID_MODE_ADVANCED .node .part.WEST {
